RESOLVED FIXED305700
REGRESSION(305691@main): PDF background should remain gray in pre-Liquid Glass macOS
https://bugs.webkit.org/show_bug.cgi?id=305700
Summary REGRESSION(305691@main): PDF background should remain gray in pre-Liquid Glas...
Abrar Rahman Protyasha
Reported 2026-01-17 07:21:02 PST
The gray to white background color change only makes sense in Liquid Glass environments, which is only a subset of all (supported) macOS configurations.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-17 07:21:08 PST
Abrar Rahman Protyasha
Comment 2 2026-01-18 01:59:06 PST
EWS
Comment 3 2026-01-19 02:33:06 PST
Committed 305813@main (3aa7942d9f60): <https://commits.webkit.org/305813@main> Reviewed commits have been landed. Closing PR #56784 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.