Cherry-pick 3aa7942d9f60. rdar://168580653

REGRESSION(305691@main): PDF background should remain gray in pre-Liquid Glass macOS
    https://bugs.webkit.org/show_bug.cgi?id=305700
    rdar://168362073

    Reviewed by Alexey Proskuryakov.

    The gray to white background color change in 305691@main only makes
    sense in Liquid Glass environments, which is a subset of all (supported)
    macOS configurations. In this patch, we limit the behavior change to
    platforms where HAVE_LIQUID_GLASS is true. Critically, this restores
    behavior on macOS Sequoia-and-older.

    No new tests, but we check in non-Liquid Glass test expectations as
    well.

    * LayoutTests/platform/mac-sequoia/pdf/fullscreen-expected.txt: Added.
    * LayoutTests/platform/mac-sequoia/pdf/load-pdf-twice-in-sequence-expected.txt: Added.
    * LayoutTests/platform/mac-sequoia/pdf/pdf-in-embed-expected.txt: Added.
    * LayoutTests/platform/mac-sequoia/pdf/pdf-in-styled-embed-expected.txt: Added.
    * Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
    (WebKit::PDFPluginBase::pluginBackgroundColor):

    Canonical link: https://commits.webkit.org/305813@main

Identifier: 305413.79@safari-7624-branch